--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
  </head>
  <body>
     <h1>Welcome to My Resume</h1>
-    <h2>I am a web Developer</h2><br/>
-    <img src="./assets/images/Profile_picture.png" height="200" width="200" /><br/>
-    <a href="./public/about.html">About Me</a>
+    <br/>
+    <a href="./public/about.html"><img src="./assets/images/Profile_picture.png" height="200" width="200" /></a>
       <h3>Summary:</h3>
      <p>So this is my personal Porfolio in which I am going to discribing my skills which I think I Know.</p>
      <h3>Education:</h3>
