--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Resume</title>
  </head>
  <body>
-    <h1>Welcome to My Resume</h1>
+    <h1>Rajput Harshvardhan</h1>
     <br/>
     <a href="./public/about.html"><img src="./assets/images/Profile_picture.png" height="200" width="200" /></a>
       <h3>Summary:</h3>
@@ -25,9 +25,11 @@
       </ul>
      <h3>Skills:</h3>
      <ul>
-        <li>I know C++ , Python primarly and know littel bit of Java also,</li>
-        <li>Learning Web Development </li>
-        <li>I Know the concept of DSA (Need practice to perfect some of them).</li>
+      <li>C++:              ⭐️⭐️⭐️⭐️⭐️
+      <li>Python:           ⭐️⭐️⭐️⭐️ </li>
+      <li>Java:             ⭐️⭐️</li>
+      <li>Web Development:  ⭐️⭐️⭐️⭐️ </li>
+      <li>DSA:              ⭐️⭐️⭐️</li>    
      </ul>
      <h3>Achievements:</h3>
      <ul>
@@ -44,5 +46,8 @@
      <hr />
      <a href="./public/contact.html">Contact Me</a><br/>
      <a href="./public/Hobbis.html">Hobbis</a>
+     <footer>
+      <p>Copyright &copy; 2022 Harshvardhan Rajput</p>
+     </footer>
  </body>
  </html>
